--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -36,7 +36,8 @@ librpm_la_SOURCES = \
 	verify.c rpmlock.c rpmlock.h misc.h \
 	rpmscript.h rpmscript.c legacy.c merge.c \
 	rpmchroot.c rpmchroot.h \
-	rpmplugins.c rpmplugins.h rpmug.c rpmug.h
+	rpmplugins.c rpmplugins.h rpmug.c rpmug.h \
+	rpmsecurity.c rpmsecurity.h
 
 librpm_la_LDFLAGS = -version-info 3:0:0
 
